--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.3",
     "reactstrap": "^8.9.0",
     "styled-components": "^5.2.3",
+    "styled-react-modal": "^2.1.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
