--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9"
+  },
+  "engines": {
+    "node": "^15.14.0"
   }
 }
